# HA4T

./: .gitignore  AGENTS.md  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs-and-deploy.yml  publish.yml
docs/: README.md  requirements.txt
docs/source/: README_MORE.rst  conf.py  index.rst
docs/source/modules/: ha4t.aircv.aircv.rst  ha4t.aircv.cal_confidence.rst  ha4t.aircv.cv.rst  ha4t.aircv.error.rst  ha4t.aircv.keypoint_base.rst  ha4t.aircv.keypoint_matching.rst  ha4t.aircv.keypoint_matching_contrib.rst  ha4t.aircv.multiscale_template_matching.rst  ha4t.aircv.resolution.rst  ha4t.aircv.rst  (+28 more)
ha4t/: README.md  __init__.py  api.py  config.py  exceptions.py  orc.py  selector.py
ha4t/aircv/: aircv.py  cal_confidence.py  cv.py  keypoint_base.py  keypoint_matching.py  multiscale_template_matching.py  settings.py  sift.py  template.py  template_matching.py  utils.py
ha4t/binaries/: __init__.py
ha4t/cdp/: __init__.py  by.py  cdp.py  jsCode.py  sample.py  server.py
ha4t/device/: __init__.py  _base.py  apps.py  capture.py  files.py  interaction.py  queries.py
ha4t/drivers/: __init__.py  android.py  base.py  harmony.py  ios.py
ha4t/editor/: DEVELOP.md  README.md  __main__.py  _config.py  _device.py  _models.py  _utils.py  _version.py  cli.py  conftest.py
ha4t/matchers/: __init__.py  image.py  ocr.py
ha4t/monitor/: __init__.py  android.py  parsers.py
ha4t/utils/: __init__.py  decorator_utils.py  files_operat.py  log_utils.py  paths.py  xlsx.py
scripts/: gen_api_ref.py
tasks/: demo.py  demo.yaml  new_test.py  run
test/: test_hello.py
tests/: test_canonical_mapping.py  test_connect.py  test_device_dispatch.py  test_include.py  test_pom_api.py  test_selector.py  test_workspace.py  test_xpath_lite.py
(+40 files in other folders)
